--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body class="bg-black text-white font-mono">
 
   <div class="min-h-screen flex flex-col items-center">
-    <h1 class="text-center text-4xl font-bold my-6">Rivalz Dashboard</h1>
+    <h1 class="text-center text-4xl font-bold mt-6">Rivalz Dashboard</h1>
+    <span class="text-center text-bold text-gray-400 text-md mb-6">v1.0</span>
 
     <!-- Input form -->
     <div class="w-full max-w-md mb-6">
