--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body class="bg-black text-white font-mono">
@@ -43,7 +47,7 @@
 
         <button id="fetchData" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg">
           <span id="fetchText">Load Nodes</span>
-          <span id="spinner" class="hidden spinner"></span>
+          <span id="spinner" class="hidden spinner ml-2"></span>
         </button>
       </div>
     </div>
@@ -85,6 +89,7 @@
                 <th class="py-3 px-4 sortable" data-column="totalMinuteRun">Total Min Run</th>
                 <th class="py-3 px-4 sortable" data-column="storageUsed">Storage Used</th>
                 <th class="py-3 px-4 sortable" data-column="teraFlops">TeraFlops</th>
+                <th class="py-3 px-4 sortable" data-column="liveTimeMinute">live Time Minute</th>
                 <th class="py-3 px-4 sortable sorted-desc" data-column="lastPing">Last Ping</th>
                 <th class="py-3 px-4 sortable" data-column="createdAt">Created At</th>
                 <th class="py-3 px-4 sortable" data-column="updatedAt">Updated At</th>
