--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <label for="walletAddress" class="block text-sm font-medium mb-2">Enter Wallet Address</label>
         <input type="text" id="walletAddress" placeholder="0x..." class="w-full p-3 rounded-lg bg-gray-800 text-white border border-gray-700 mb-4" />
 
-        <button id="fetchData" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg">
+        <button id="fetchData" class="w-full bg-blue-600 hover:bg-blue-700 flex justify-center text-white font-bold py-3 rounded-lg">
           <span id="fetchText">Load Nodes</span>
           <span id="spinner" class="hidden spinner ml-2"></span>
         </button>
